Allow GNUiconv to be compiled on Solaris (XERCESC-1856)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@801299 13f79535-47bb-0310-9956-ffa450edef68